// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render first selected 1`] = `
.c0 {
  margin-left: -4px;
  margin-right: -4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-left: 4px;
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  outline: none;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

.c2 {
  color: #000000;
  position: relative;
  padding: 8px 12px;
  margin: 0 0 4px;
  color: #6A50F2;
  padding: 8px 12px 12px;
  margin: 0;
}

.c2:hover {
  background-color: #EBE7FF;
}

.c2:focus {
  box-shadow: 0 0 0 4px #EBE7FF;
}

.c2:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: #6A50F2;
}

.c4 {
  color: #000000;
  position: relative;
  padding: 8px 12px;
  margin: 0 0 4px;
}

.c4:hover {
  background-color: #EBE7FF;
}

.c4:focus {
  box-shadow: 0 0 0 4px #EBE7FF;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
      data-testid="pbl-tab"
      name="hello"
    >
      <span
        class="c3"
      >
        Hello
      </span>
    </button>
    <button
      class="c1 c4"
      data-testid="pbl-tab"
      name="world"
    >
      <span
        class="c3"
      >
        World
      </span>
    </button>
    <button
      class="c1 c4"
      data-testid="pbl-tab"
      name="bye"
    >
      <span
        class="c3"
      >
        Bye
      </span>
    </button>
  </div>
</div>
`;

exports[`Render tabs with icons 1`] = `
.c0 {
  margin-left: -4px;
  margin-right: -4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-left: 4px;
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  outline: none;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

.c2 {
  color: #000000;
  position: relative;
  padding: 8px 12px;
  margin: 0 0 4px;
}

.c2:hover {
  background-color: #EBE7FF;
}

.c2:focus {
  box-shadow: 0 0 0 4px #EBE7FF;
}

.c5 {
  color: #000000;
  position: relative;
  padding: 8px 12px;
  margin: 0 0 4px;
  color: #6A50F2;
  padding: 8px 12px 12px;
  margin: 0;
}

.c5:hover {
  background-color: #EBE7FF;
}

.c5:focus {
  box-shadow: 0 0 0 4px #EBE7FF;
}

.c5:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: #6A50F2;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
      data-testid="pbl-tab"
      name="first"
    >
      <div
        class="c3"
      >
        <div
          data-testid="icon1"
        >
          icon1
        </div>
      </div>
      <span
        class="c4"
      >
        First tab
      </span>
    </button>
    <button
      class="c1 c5"
      data-testid="pbl-tab"
      name="second"
    >
      <div
        class="c3"
      >
        <div
          data-testid="icon2"
        >
          icon2
        </div>
      </div>
      <span
        class="c4"
      >
        Second tab
      </span>
    </button>
    <button
      class="c1 c2"
      data-testid="pbl-tab"
      name="third"
    >
      <div
        class="c3"
      >
        <div
          data-testid="icon3"
        >
          icon3
        </div>
      </div>
      <span
        class="c4"
      >
        Third tab
      </span>
    </button>
  </div>
</div>
`;

exports[`Work with one tab 1`] = `
.c0 {
  margin-left: -4px;
  margin-right: -4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-left: 4px;
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  outline: none;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

.c2 {
  color: #000000;
  position: relative;
  padding: 8px 12px;
  margin: 0 0 4px;
  color: #6A50F2;
  padding: 8px 12px 12px;
  margin: 0;
}

.c2:hover {
  background-color: #EBE7FF;
}

.c2:focus {
  box-shadow: 0 0 0 4px #EBE7FF;
}

.c2:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: #6A50F2;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
      data-testid="pbl-tab"
      name="hello"
    >
      <span
        class="c3"
      >
        Hello
      </span>
    </button>
  </div>
</div>
`;
